src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sqlite_diagnostics_overlay_loaded.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                                          connected | local
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [Trig] [DDL]                                                                                       
│> users                                │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  posts                                ││(select a table)                                                                                                          │
│  comments                             ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ SQLite Diagnostics ─────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │                                                                                                                 │                        │
│                        │Database file: /tmp/app.db                                                                                       │                        │
│                        │                                                                                                                 │                        │
│                        │SQLite version (requires 3.41.1+): 3.45.0                                                                        │                        │
│                        │                                                                                                                 │                        │
│                        │SQLite features: FTS5: available                                                                                 │                        │
│                        │  FTS4: not available                                                                                            │                        │
│                        │  RTree: available                                                                                               │                        │
│                        │  JSON: available                                                                                                │                        │
│                        │                                                                                                                 │                        │
│                        │Effective foreign keys: on                                                                                       │                        │
│                        │                                                                                                                 │                        │
│                        │Journal mode: wal                                                                                                │                        │
│                        │                                                                                                                 │────────────────────────┘
│                        │Effective query only: off                                                                                        │────────────────────────┐
│                        │                                                                                                                 │                        │
│                        │Effective busy timeout (ms): 5000                                                                                │                        │
│                        │                                                                                                                 │                        │
│                        │Database list: 0: main @ /tmp/app.db                                                                             │                        │
│                        │                                                                                                                 │                        │
│                        │Quick check: ok                                                                                                  │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        ╰ Esc: Close │ ↑↓: Scroll │ r: Run check ─────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓:Scroll  r:Run check  ?:Help  Esc:Close
