src/tests/render_snapshots/snapshots/sabiql__render_snapshots__overlays__sqlite_diagnostics_overlay_loading.snap
---
source: src/tests/render_snapshots/overlays.rs
expression: output
---
test_project ▸ test_db ▸ -                                                                                                                          connected | local
┌ [1] Explorer ─────────────────────────┐[Info] [Cols] [Idx] [FK] [Trig] [DDL]                                                                                       
│> users                                │┌ [2] Inspector ───────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  posts                                ││(select a table)                                                                                                          │
│  comments                             ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                        ╭ SQLite Diagnostics ─────────────────────────────────────────────────────────────────────────────────────────────╮                        │
│                        │                                                                                                                 │                        │
│                        │Loading diagnostics...                                                                                           │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │────────────────────────┘
│                        │                                                                                                                 │────────────────────────┐
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        │                                                                                                                 │                        │
│                        ╰ Esc: Close │ ↑↓: Scroll ────────────────────────────────────────────────────────────────────────────────────────╯                        │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
│                                       ││                                                                                                                          │
└───────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
?:Help
